policies/tests/generate-sso-resources/resource-pass.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-enabled-app
  namespace: team-alpha
  annotations:
    sre.io/sso: "enabled"
  labels:
    app.kubernetes.io/name: sso-enabled-app
    app.kubernetes.io/part-of: sre-platform
    sre.io/team: team-alpha
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sso-enabled-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sso-enabled-app
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: app
          image: harbor.sre.internal/team-alpha/my-app:v1.0.0
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
